[package]
name = "task3"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls = "0.20"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23"
webpki = "0.22"
webpki-roots = "0.22"
rustls-pemfile = "0.2"
base64="0.22.1"



[[bin]]
name = "ec-server"
path = "src/ec-server.rs"

[[bin]]
name = "ec-client"
path = "src/ec-client.rs"

[[bin]]
name = "rsa-server"
path = "src/rsa-server.rs"

[[bin]]
name = "rsa-client"
path = "src/rsa-client.rs"
